[gd_scene load_steps=38 format=2]

[ext_resource path="res://Enemies/monster.png" type="Texture" id=1]
[ext_resource path="res://Monsters_Script/Demobat.gd" type="Script" id=2]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hit_Hurt_Boxes/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://WanderController.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hit_Hurt_Boxes/HitBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://SoftCollisions.tscn" type="PackedScene" id=8]
[ext_resource path="res://Hit_Hurt_Boxes/HurtBox.gd" type="Script" id=10]
[ext_resource path="res://Spells/FrozenTimer.tscn" type="PackedScene" id=11]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "demobat_move",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "demobat_move_left",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "demobat_move_top",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "demonbat",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=12]
radius = 6.0
height = 0.0

[sub_resource type="CircleShape2D" id=18]
radius = 77.0093

[sub_resource type="CircleShape2D" id=19]
radius = 5.15388

[sub_resource type="Theme" id=20]

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.882353, 0.0980392, 0.0980392, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.878431, 0.890196, 0.596078, 0.568627 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true

[node name="Demobat" type="KinematicBody2D"]
position = Vector2( 40, 24 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.5, -9.5 )
scale = Vector2( 0.59375, 0.59375 )
frames = SubResource( 6 )
animation = "demobat_move_top"
playing = true
offset = Vector2( 0, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 12 )

[node name="stats" parent="." instance=ExtResource( 7 )]
max_health = 10

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 16
collision_mask = 2
script = ExtResource( 10 )

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -15 )

[node name="Timer" type="Timer" parent="HurtBox"]

[node name="PlayerDet" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -19 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDet"]
shape = SubResource( 18 )

[node name="HitBox" parent="." instance=ExtResource( 6 )]
collision_layer = 64
collision_mask = 4
damage = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -15 )

[node name="SoftCollisions" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollisions" index="0"]
position = Vector2( 0, -1.90735e-06 )
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 19 )

[node name="WanderController" parent="." instance=ExtResource( 5 )]
wander_range = 55

[node name="Timer" parent="WanderController" index="0"]
one_shot = true
autostart = true

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -11.0
margin_top = -32.0
margin_right = 11.0
margin_bottom = -28.0
theme = SubResource( 20 )
custom_styles/fg = SubResource( 21 )
custom_styles/bg = SubResource( 22 )
max_value = 10.0
value = 10.0
percent_visible = false

[node name="FrozenTimer" parent="." instance=ExtResource( 11 )]

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_HurtBox_area_exited"]
[connection signal="timeout" from="HurtBox/Timer" to="HurtBox" method="_on_Timer_timeout"]
[connection signal="timeout" from="WanderController/Timer" to="WanderController" method="_on_Timer_timeout"]
[connection signal="timeout" from="FrozenTimer" to="." method="_on_FrozenTimer_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
[editable path="SoftCollisions"]
[editable path="WanderController"]
